--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,170 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap");
+
+:root {
+  --primary: #2b4141;
+  --secondary: #15b097;
+  --light: #efefef;
+}
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+body {
+  font-family: "Poppins", sans-serif;
+  line-height: 1.4;
+}
+
+/* Utils */
+
+.bg-primary {
+  background-color: var(--primary);
+}
+
+.bg-secondary {
+  background-color: var(--secondary);
+}
+
+.bg-light {
+  background-color: var(--light);
+}
+
+.text-primary {
+  color: var(--primary);
+}
+
+.text-secondary {
+  color: var(--secondary);
+}
+
+.btn-primary {
+  background-color: var(--secondary);
+}
+
+/* Navbar */
+.navbar {
+  height: 12vh;
+  color: #fff;
+}
+
+.navbar-container {
+  height: 100%;
+  width: 90%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: auto;
+}
+
+.nav-right {
+  display: flex;
+  align-items: center;
+}
+
+.navbar-title {
+  margin-left: 2rem;
+  font-size: 50px;
+  text-transform: uppercase;
+}
+
+.logo {
+  cursor: pointer;
+}
+
+.logo:hover {
+  animation: breathing 1s infinite;
+}
+
+@keyframes breathing {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.05);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+.nav-links {
+  list-style: none;
+}
+
+.nav-link {
+  color: var(--light);
+  text-decoration: none;
+  font-size: 30px;
+  font-weight: 400;
+  text-transform: uppercase;
+}
+
+.nav-link:first-child {
+  margin-right: 4rem;
+}
+
+/* Login */
+.login-container {
+  height: 100vh;
+}
+
+.login-content {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  min-height: 75vh;
+  min-width: 662px;
+}
+
+.login-title {
+  font-size: 90px;
+  text-transform: uppercase;
+  color: #fff;
+}
+
+.form-group {
+  display: flex;
+  width: 100%;
+  height: 91px;
+  margin: 5rem 0;
+}
+
+.icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: var(--secondary);
+  color: #fff;
+  min-width: 98px;
+  font-size: 40px;
+  padding: 1rem;
+}
+
+.input-field {
+  min-width: 564px;
+  padding: 0 2rem;
+  outline: none;
+  font-size: 40px;
+  border-radius: 0;
+  border: none;
+}
+
+.login-btns {
+  display: flex;
+  width: 662px;
+  justify-content: space-between;
+}
+
+.btn-login {
+  width: 320px;
+  height: 100px;
+  font-size: 50px;
+  color: #fff;
+  text-transform: uppercase;
+  outline: none;
+  border-radius: 7px;
+  border: none;
 }
