--- a/client/src/App.css
+++ b/client/src/App.css
@@ -228,6 +228,134 @@ body {
   margin-top: 2rem;
 }
 
+/* Home */
+.home-container {
+  min-height: 100vh;
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+}
+
+.sidebar {
+  min-height: 100vh;
+  background-color: var(--primary);
+}
+
+/* Timeline */
+.timeline {
+  padding: 4rem 0 4rem 4rem;
+}
+
+.timeline-title {
+  font-size: 40px;
+  font-weight: 400;
+}
+
+.timeline-title:before {
+  content: "";
+  display: block;
+  width: 70px;
+  height: 8px;
+  border: 5px solid var(--secondary);
+  background-color: var(--secondary);
+  border-radius: 9px;
+  margin-bottom: 0.3rem;
+}
+
+/* Posts */
+.post {
+  margin-top: 2rem;
+  width: 95%;
+  min-height: 414px;
+  background-color: #fff;
+  border: 1px solid var(--primary);
+  padding: 1.5rem;
+  display: flex;
+  flex-direction: column;
+}
+
+.post-top {
+  display: flex;
+  justify-content: space-between;
+  padding-bottom: 1rem;
+  border-bottom: 1px solid var(--primary);
+}
+
+.post-info {
+  display: flex;
+}
+
+.post-info-content {
+  margin-left: 1rem;
+}
+
+.post-author {
+  font-size: 30px;
+  font-weight: 500;
+}
+
+.post-date {
+  font-size: 20px;
+  color: #535353;
+  font-weight: 400;
+}
+
+.like-count {
+  margin-bottom: 1rem;
+}
+
+.like-count,
+.comment-count {
+  color: var(--secondary);
+  display: flex;
+  align-items: center;
+}
+
+.like-count i,
+.comment-count i {
+  font-size: 30px;
+}
+
+.like-count h4,
+.comment-count h4 {
+  margin-left: 1rem;
+  font-size: 22px;
+}
+
+.post-content {
+  margin-top: 1rem;
+  font-size: 30px;
+  padding-bottom: 1rem;
+  border-bottom: 1px solid var(--primary);
+}
+
+.post-actions {
+  display: flex;
+  margin-top: 1rem;
+  margin-left: 0.3rem;
+}
+
+.like-post {
+  margin-right: 2rem;
+}
+
+.like-post,
+.comment-post {
+  display: flex;
+  align-items: center;
+}
+
+.like-post i,
+.comment-post i {
+  font-size: 50px;
+  cursor: pointer;
+}
+
+.like-post h4,
+.comment-post h4 {
+  font-size: 22px;
+  margin-left: 0.5rem;
+}
+
 /* Laptop Media Queries */
 @media (max-width: 1440px) {
   .navbar {
