--- a/client/src/App.css
+++ b/client/src/App.css
@@ -58,6 +58,38 @@ body {
   padding: 2rem 0;
 }
 
+.loading-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 50%;
+}
+
+.loader {
+  border: 16px solid #f3f3f3;
+  border-top: 16px solid var(--secondary);
+  border-radius: 50%;
+  width: 120px;
+  height: 120px;
+  animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.no-posts {
+  font-size: 40px;
+  font-weight: 400;
+  margin-top: 2rem;
+  color: var(--danger);
+}
+
 /* Navbar */
 .navbar {
   height: 12vh;
@@ -232,7 +264,7 @@ body {
 .home-container {
   min-height: 100vh;
   display: grid;
-  grid-template-columns: 1fr 3fr;
+  grid-template-columns: 1fr 2fr;
 }
 
 .sidebar {
@@ -265,7 +297,7 @@ body {
 .post {
   margin-top: 2rem;
   width: 95%;
-  min-height: 414px;
+  max-height: 414px;
   background-color: #fff;
   border: 1px solid var(--primary);
   padding: 1.5rem;
@@ -324,14 +356,19 @@ body {
 .post-content {
   margin-top: 1rem;
   font-size: 30px;
-  padding-bottom: 1rem;
-  border-bottom: 1px solid var(--primary);
+  height: 400px;
+  border: none;
+  font-family: "Poppins", sans-serif;
+  resize: none;
+  background-color: #fff;
 }
 
 .post-actions {
   display: flex;
   margin-top: 1rem;
   margin-left: 0.3rem;
+  border-top: 1px solid var(--primary);
+  padding-top: 1rem;
 }
 
 .like-post {
@@ -354,6 +391,77 @@ body {
 .comment-post h4 {
   font-size: 22px;
   margin-left: 0.5rem;
+}
+
+/* Sidebar */
+.sidebar {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 2rem 0;
+}
+
+.profile-img {
+  margin: 2rem 0;
+}
+
+.create-post-title {
+  background-color: var(--light);
+  height: 71px;
+  margin-top: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid#707070;
+}
+
+.create-post-title h3 {
+  font-size: 25px;
+  font-weight: 500;
+}
+
+.create-post-content {
+  position: relative;
+  border: 1px solid#707070;
+  background-color: #fff;
+  width: auto;
+  height: auto;
+  display: inline-block;
+  padding: 0;
+}
+
+.create-post-content textarea {
+  width: 400px;
+  height: 537px;
+  margin: 0;
+  border-color: rgba(255, 255, 255, 0);
+  padding: 1rem;
+  min-width: 150px;
+  min-height: 50px;
+  margin-bottom: 40px;
+  font-size: 30px;
+  font-family: "Poppins", sans-serif;
+  outline: none;
+  resize: none;
+}
+
+.post-btn {
+  position: absolute;
+  bottom: 10px;
+  right: 15px;
+  background-color: var(--secondary);
+  color: #fff;
+  cursor: pointer;
+  line-height: 1.8;
+  width: 105px;
+  height: 31px;
+  font-size: 18px;
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: 500;
+  border-radius: 7px;
+  border: none;
+  outline: none;
 }
 
 /* Laptop Media Queries */
