--- a/client/src/App.css
+++ b/client/src/App.css
@@ -45,12 +45,36 @@ body {
   background-color: var(--secondary);
 }
 
+.mt-1 {
+  margin-top: 1rem;
+}
+
 .mr-1 {
   margin-right: 1rem;
 }
 
+.mb-1 {
+  margin-bottom: 1rem;
+}
+
+.ml-1 {
+  margin-left: 1rem;
+}
+
 .mt-3 {
-  margin-top: 3rem !important;
+  margin-top: 3rem;
+}
+
+.mr-3 {
+  margin-right: 3rem;
+}
+
+.mb-3 {
+  margin-bottom: 3rem;
+}
+
+.ml-3 {
+  margin-left: 3rem;
 }
 
 .alert {
@@ -546,6 +570,31 @@ body {
 .comment-form {
   margin-top: 3rem;
   width: 95%;
+}
+
+/* Friend */
+.add-friend {
+  background-color: #fff;
+  height: 126px;
+  width: 95%;
+  border: 1px solid var(--primary);
+  padding: 1.5rem;
+  display: flex;
+  justify-content: space-between;
+}
+
+.add-friend-user {
+  display: flex;
+}
+
+.add-friend-info {
+  display: flex;
+}
+
+.add-friend-btn {
+  color: var(--secondary);
+  font-size: 25px;
+  cursor: pointer;
 }
 
 /* Laptop Media Queries */
