--- a/client/src/App.css
+++ b/client/src/App.css
@@ -471,6 +471,14 @@ body {
   margin: 2rem 0;
 }
 
+.profile-pic {
+  width: 88px;
+  height: 83px;
+  border-radius: 7px;
+  border: 1px solid var(--primary);
+  margin-right: 0.3rem;
+}
+
 .create-post-title {
   background-color: var(--light);
   height: 71px;
